--- a/worlds/1940s.html
+++ b/worlds/1940s.html
@@ -1,25 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CityBlocks 1940 — CityBlocks.com</title>
+  <link rel="stylesheet" href="../styles.css" />
   <style>
-    html,body {margin:0; height:100%; background:#000;}
-    video {position:fixed; inset:0; width:100%; height:100%;
-           object-fit:cover; z-index:0; background:#000;}
-    .overlay {position:fixed; top:0; left:0; width:100%;
-              padding:16px; display:flex; justify-content:space-between;
-              align-items:center; z-index:10;}
-    .brand h1 {margin:0; font-size:22px; font-weight:700; color:#fff;}
-    nav a {color:#fff; text-decoration:none; padding:8px 14px;
-           border-radius:12px; border:1px solid rgba(255,255,255,.5);
-           background:rgba(0,0,0,.4);}
-    nav a:hover {background:gold; color:#000;}
+    html, body {
+      margin: 0;
+      height: 100%;
+      background: #000;
+    }
+    video {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      object-fit: cover;
+      object-position: center;
+      z-index: 0;
+      background: #000;
+    }
+    .overlay {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%;
+      padding: 16px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      z-index: 10;
+    }
+    .brand h1 {
+      margin: 0;
+      font-size: 22px;
+      font-weight: 700;
+      color: #fff;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      padding: 8px 14px;
+      border-radius: 12px;
+      border: 1px solid rgba(255,255,255,.5);
+      background: rgba(0,0,0,.4);
+    }
+    nav a:hover {
+      background: gold;
+      color: #000;
+    }
   </style>
 </head>
 <body>
   <video autoplay muted loop playsinline>
+    <source src="../1940s.mp4" type="video/mp4" />
     <source src="../videos/1940s.mp4" type="video/mp4" />
   </video>
 
