--- a/worlds/1940s.html
+++ b/worlds/1940s.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CityBlocks 1940 — CityBlocks.com</title>
-  <link rel="stylesheet" href="../styles.css" />
   <style>
     html, body {
       margin: 0;
@@ -13,16 +12,18 @@
     }
     video {
       position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      object-fit: cover;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
       object-position: center;
+      background-color: #000;
       z-index: 0;
-      background: #000;
     }
     .overlay {
       position: fixed;
-      top: 0; left: 0;
+      top: 0;
+      left: 0;
       width: 100%;
       padding: 16px;
       display: flex;
@@ -41,8 +42,8 @@
       text-decoration: none;
       padding: 8px 14px;
       border-radius: 12px;
-      border: 1px solid rgba(255,255,255,.5);
-      background: rgba(0,0,0,.4);
+      border: 1px solid rgba(255, 255, 255, 0.5);
+      background: rgba(0, 0, 0, 0.4);
     }
     nav a:hover {
       background: gold;
@@ -52,7 +53,6 @@
 </head>
 <body>
   <video autoplay muted loop playsinline>
-    <source src="../1940s.mp4" type="video/mp4" />
     <source src="../videos/1940s.mp4" type="video/mp4" />
   </video>
 
