--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!-- Updated: Version 2.0 -->
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -564,7 +564,7 @@
 <body>
     <!-- Header -->
     <header>
-        <h1>🏢 CityBlocks</h1>
+        <h1>CityBlocks</h1>
         <p class="tagline">Your Neighborhood, Your Way</p>
     </header>
 
