--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
         <!-- Center Content -->
         <div class="center-content">
             <div class="brownstone-container">
-                <img src="CityBlocks-Brownstone.png" alt="CityBlocks Brownstone" class="brownstone-image">
+                <img src="brownstone.png" alt="CityBlocks Brownstone" class="brownstone-image">
                 
                 <!-- Category Windows - Hover to preview, Click to visit directory -->
                 <div id="window-musicians" class="category-window" onclick="showCategoryPreview('musicians')">
