--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
             <h3>Get Started</h3>
             <a href="customize.html" class="nav-btn primary">🏠 Get Your Own Brownstone</a>
             <button class="nav-btn" onclick="alert('Tutorial coming soon!')">📺 How it Works</button>
-            <button class="nav-btn" onclick="alert('Showcased Creators coming soon!')">👥 Showcased Creators</button>
+            <button class="nav-btn" onclick="alert('Creators Showcase coming soon!')">👥 Creators Showcase</button>
             <button class="nav-btn" onclick="openAboutModal()">ℹ️ About</button>
         </div>
 
