Update homepage title for 2025 version

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 ╔═══════════════════════════════════════════════════════════════════════════╗
-║                           CITYBLOCKS HOMEPAGE                              ║
+║                          CITYBLOCKS HOMEPAGE 2025                             ║
 ║                          index.html - VERSION 2.2                          ║
 ║                    ✨ SEQUENTIAL DIMENSIONAL™ EDITION ✨                   ║
 ╚═══════════════════════════════════════════════════════════════════════════╝
