--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <!--
 ╔═══════════════════════════════════════════════════════════════════════════╗
-║                           CITYBLOCKS HOMEPAGE                              ║
-║                          index.html - VERSION 2.2                          ║
-║                    ✨ SEQUENTIAL DIMENSIONAL™ EDITION ✨                   ║
+║                          CITYBLOCKS HOMEPAGE 2025                         ║
+║                          index.html - VERSION 2.2                         ║
+║                    ✨ SEQUENTIAL DIMENSIONAL™ EDITION ✨                 ║
 ╚═══════════════════════════════════════════════════════════════════════════╝
 
 📅 DATE: November 11, 2025
