--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!--
 ╔═══════════════════════════════════════════════════════════════════════════╗
 ║                           CITYBLOCKS HOMEPAGE                              ║
-║                          index.html - VERSION 2.9                          ║
+║                          index.html - VERSION 2.9  Change #1 removal of icons and text from windows║
 ╚═══════════════════════════════════════════════════════════════════════════╝
 
 📅 DATE: November 11, 2025
