Refactor brownstone player module structure
Removed old brownstone player module content and added a new container with an image.

--- a/modules/brownstone-player.html
+++ b/modules/brownstone-player.html
@@ -43,13 +43,6 @@
     }
 </style>
 
-<div class="brownstone-player-module">
-    <h2>🏢 Brownstone Player Module</h2>
-    <div class="brownstone-placeholder">
-        🎬
-    </div>
-    <p>Brownstone video player will be migrated here</p>
-    <p style="font-size: 0.9rem; margin-top: 15px;">
-        12 Windows • Video Playback • Sequential Dimensional™ Technology
-    </p>
+<div class="brownstone-container">
+    <img src="../images/brownstone.png" alt="CityBlocks Brownstone" class="brownstone-image">
 </div>
