Update script source path for brownstone-controls.js

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             
             // Load JavaScript module AFTER all HTML is loaded
             const script = document.createElement('script');
-            script.src = 'modules/brownstone-controls.js';
+            script.src = 'js/brownstone-controls.js';
             script.onload = () => {
                 console.log('✅ JavaScript loaded! Controls ready.');
             };
